Build ACHE using Java 17